<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBg"
            android:gravity="center"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:id="@+id/AgenteLBar"
                android:layout_width="250dp"
                android:layout_height="54dp"
                android:ems="10"
                android:text="@string/agente"
                android:textAlignment="center"

                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="34dp" />

            <TextView
                android:id="@+id/EdVersion"
                android:layout_width="57dp"
                android:layout_height="15dp"
                android:ems="10"
                android:text="@string/v2_1_13"
                android:textColor="@color/colorWhite"
                tools:layout_editor_absoluteX="301dp"
                tools:layout_editor_absoluteY="50dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:contentDescription="@string/contenido"
                android:src="@android:drawable/ic_dialog_info"
                tools:layout_editor_absoluteX="363dp"
                tools:layout_editor_absoluteY="47dp" />
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="272dp"
            android:layout_height="400dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="@dimen/margin_large"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/colorWhite"
            card_view:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="267dp"
                android:layout_height="360dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    android:src="@drawable/usuarioperfil" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="171dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tNombreUsuario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jerry_alejandro"
                                android:textSize="28sp"
                                tools:layout_editor_absoluteX="78dp"
                                tools:layout_editor_absoluteY="184dp" />

                            <TextView
                                android:id="@+id/tEstatus"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/estatus"
                                android:textAlignment="center"

                                android:textSize="18sp"
                                tools:layout_editor_absoluteX="191dp"
                                tools:layout_editor_absoluteY="239dp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/Tincidencias"
                                    android:layout_width="99dp"
                                    android:layout_height="24dp"
                                    android:layout_marginStart="52dp"
                                    android:layout_marginLeft="52dp"
                                    android:text="@string/incidencias"
                                    tools:layout_editor_absoluteY="269dp" />

                                <Button
                                    android:id="@+id/bIncidencias"
                                    android:layout_width="32dp"
                                    android:layout_height="23dp"
                                    android:background="@color/colorRed"
                                    android:text="@string/_0"
                                    tools:layout_editor_absoluteX="143dp"
                                    tools:layout_editor_absoluteY="269dp" />

                                <TextView
                                    android:id="@+id/tActivo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/activo"
                                    tools:layout_editor_absoluteX="268dp"
                                    tools:layout_editor_absoluteY="269dp" />

                                <Button
                                    android:id="@+id/bActivo"
                                    android:layout_width="30dp"
                                    android:layout_height="24dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/ok"
                                    tools:layout_editor_absoluteX="143dp"
                                    tools:layout_editor_absoluteY="269dp" />

                            </LinearLayout>

                            <Button
                                android:id="@+id/bCerrarSesion"
                                android:layout_width="284dp"
                                android:layout_height="wrap_content"
                                android:background="@color/colorWhite"
                                android:drawableBottom="@android:drawable/ic_lock_power_off"
                                android:shadowColor="@color/colorBg"
                                android:text="@string/cerrar_sesion"
                                android:textAlignment="inherit"

                                android:textColor="@color/colorBg"
                                android:textSize="24sp"
                                tools:layout_editor_absoluteY="318dp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

